[package]
name = "pololu_tic"
version = "0.2.0-beta.2"
edition = "2024"
authors = ["G2-Games <ke0bhogsg@gmail.com>"]
repository = "https://github.com/unl-rocketry/pololu_tic-rs"
description = """
An embedded-hal driver to control the Tic series of stepper motor controllers
created by Pololu.
""""
keywords = ["embedded-hal-driver", "motor", "stepper"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
default = ["i2c"]
i2c = []
serial = ["embedded-io"]


[dependencies]
num-traits = { version = "0.2", default-features = false }
num-derive = "0.4"
embedded-hal = "1.0"
thiserror = { version = "2.0", default-features = false }
embedded-io = { version = "0.6", optional = true }


[package.metadata.docs.rs]
all-features = true
