[package]
name = "pololu_tic"
version = "0.2.0-beta.2"
edition = "2024"
authors = ["G2-Games <ke0bhogsg@gmail.com>"]
repository = "https://github.com/unl-rocketry/pololu_tic-rs"
description = """
An embedded-hal driver to control the Tic series of stepper motor controllers
created by Pololu.
"""
keywords = ["embedded-hal-driver", "motor", "stepper"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
default = ["i2c"]
# enabling std allows us to enable the std features of some libraries
std = ["thiserror/std", "num-traits/std", "embedded-io?/std"]
i2c = ["dep:embedded-hal"]
serial = ["dep:embedded-hal", "dep:embedded-io"]
usb = ["std", "dep:nusb"]


[dependencies]
num-traits = { version = "0.2", default-features = false }
num-derive = "0.4"
embedded-hal = { version = "1.0", optional = true }
thiserror = { version = "2.0", default-features = false }

# Required for embedded-hal serial
embedded-io = { version = "0.6", optional = true }

# Required for USB communication
nusb = { version = "0.1", optional = true }


[package.metadata.docs.rs]
all-features = true
