[package]
name = "pololu_tic"
version = "0.2.0-beta.7"
edition = "2024"
authors = ["G2-Games <ke0bhogsg@gmail.com>"]
repository = "https://github.com/unl-rocketry/pololu_tic-rs"
description = """
A driver to control the Tic series of stepper motor controllers created by
Pololu, including the T500, T834, T825, T249, and 36v4.
"""
keywords = ["embedded-hal-driver", "motor", "stepper"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
default = ["i2c"]

# Enables std support. This allows us to enable the std features of some
# libraries, which allow for derives and `from` implementations
std = ["thiserror/std", "num-traits/std", "embedded-io?/std"]

# Enables support for the I²C interface
i2c = ["dep:embedded-hal"]

# Enables support for the Serial interface
serial = ["dep:embedded-hal", "dep:embedded-io"]

# Enables support for the USB interface. Requires `std`, and does not run on
# microcontrollers. Only supports platforms that `nusb` supports.
usb = ["std", "dep:nusb"]


[dependencies]
num-traits = { version = "0.2", default-features = false }
num-derive = "0.4"
thiserror = { version = "2.0", default-features = false }

# Enabled when either Serial or I²C are enabled
embedded-hal = { version = "1.0", optional = true }

# Enabled when Serial is enabled
embedded-io = { version = "0.7", optional = true }

# Enabled when USB is enabled
nusb = { version = "0.2", optional = true, features = [ "smol" ] }


[package.metadata.docs.rs]
all-features = true
